--- a/sick-fits/frontend/package.json
+++ b/sick-fits/frontend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next -p 7777",
-    "build": "next --max_old_space_size=4096 build",
-    "start": "next start -p 7777 --max_old_space_size=4096",
+    "build": "next build",
+    "start": "next start -p 7777",
     "test": "NODE_ENV=test jest --watch"
   },
   "author": "",
